@@ -1,0 +1,10 @@
+<!DOCTYPE html>
+<iframe></iframe>
+<script>
+framedoc = frames[0].document.documentElement;
+document.body.innerText = 'PASS';
+framedoc.innerHTML = '<title style="position:fixed">';
+framedoc.getElementsByTagName('title')[0].innerText = 'a';
+if (window.layoutTestController)
+    layoutTestController.dumpAsText()
+</script>
