@@ -1,3 +1,15 @@
+2012-06-05  Douglas Stockwell  <dstockwell@chromium.org>
+
+        Crash when modifying fixed-position elements in a detached frame
+        https://bugs.webkit.org/show_bug.cgi?id=88288
+
+        Reviewed by James Robinson.
+
+        Test: fast/block/positioning/fixed-position-detached-frame.html
+
+        * css/StyleResolver.cpp:
+        (WebCore::StyleResolver::collectMatchingRulesForList):
+
 2012-06-05  Andrey Kosyakov  <caseq@chromium.org>
 
         Web Inspector: render timeline paint category dark green
